--- a/qt_design/main_window.ui
+++ b/qt_design/main_window.ui
@@ -5536,7 +5536,7 @@ border-color: rgb(50,50,50);}</string>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="saveToFilePushButton">
+        <widget class="QPushButton" name="doorOpenResetPushButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -5545,13 +5545,13 @@ border-color: rgb(50,50,50);}</string>
          </property>
          <property name="minimumSize">
           <size>
-           <width>100</width>
+           <width>50</width>
            <height>50</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>100</width>
+           <width>50</width>
            <height>50</height>
           </size>
          </property>
@@ -5562,10 +5562,54 @@ border-color: rgb(50,50,50);}</string>
           </font>
          </property>
          <property name="styleSheet">
-          <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:25px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
+          <string notr="true">QPushButton{color: white; border-color:black; border-radius:25px;border-width: 1px;border-style: solid;}</string>
          </property>
          <property name="text">
-          <string>Save</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>../main/res/edit-reset.svg</normaloff>../main/res/edit-reset.svg</iconset>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="saveToFilePushButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{color: white; border-color:black; border-radius:25px;border-width: 1px;border-style: solid;}</string>
+         </property>
+         <property name="text">
+          <string/>
          </property>
          <property name="icon">
           <iconset>
@@ -5589,13 +5633,13 @@ border-color: rgb(50,50,50);}</string>
          </property>
          <property name="minimumSize">
           <size>
-           <width>100</width>
+           <width>50</width>
            <height>50</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>100</width>
+           <width>50</width>
            <height>50</height>
           </size>
          </property>
@@ -5609,10 +5653,10 @@ border-color: rgb(50,50,50);}</string>
           <bool>false</bool>
          </property>
          <property name="styleSheet">
-          <string notr="true">QPushButton:enabled{color: white; background-color: rgb(50,50,50); border-radius:25px;border-color: rgb(50,50,50);border-width: 1px;border-style: solid;}</string>
+          <string notr="true">QPushButton{color: white; border-color:black; border-radius:25px;border-width: 1px;border-style: solid;}</string>
          </property>
          <property name="text">
-          <string>Back</string>
+          <string/>
          </property>
          <property name="icon">
           <iconset>
@@ -5626,50 +5670,6 @@ border-color: rgb(50,50,50);}</string>
          </property>
          <property name="checkable">
           <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="doorOpenResetPushButton">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>100</width>
-           <height>50</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>100</width>
-           <height>50</height>
-          </size>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-           <bold>false</bold>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">color:white;border-radius: 25px;background-color:rgb(50,50,50);border-color:rgb(50,50,50);border-width: 1px;border-style: solid;</string>
-         </property>
-         <property name="text">
-          <string>Reset</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>../main/res/edit-reset.svg</normaloff>../main/res/edit-reset.svg</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>32</width>
-           <height>32</height>
-          </size>
          </property>
         </widget>
        </item>
@@ -5689,7 +5689,7 @@ border-color: rgb(50,50,50);}</string>
        <item>
         <widget class="QLabel" name="status_bar">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
